# embedding-demo-20240204

./: Cargo.toml  diagram.json  wokwi.toml
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: main.rs
