[package]
name = "embedding-demo-20240204"
version = "0.1.0"
authors = ["Ghislaine Laios <laios54@pm.me>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
embedded-hal = "1.0.0"
anyhow = "1.0.79"
mlx9061x = "0.2.1"
thiserror = "1.0.56"
embedded-hal-bus = { version = "0.1.0", features = ["std"] }

[build-dependencies]
embuild = "0.31.3"
